css fixes in smallMenu and navbar on mobile

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -132,6 +132,14 @@
 
 @media (max-width: 768px){
 
+    .navbar{
+        width: 100%;
+    }
+
+    .navbar__left{
+        margin-left: 1rem;
+    }
+
     .big-screen{
         display: none;
     }
